8358330: AsmRemarks and DbgStrings clear() method may not get called before their destructor

Signed-off-by: Ashutosh Mehra <asmehra@redhat.com>